# web-services-2022

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: contracts.py  main.py  routers.py
app/shop/: routers.py
grpc/: client.py  pyproject.toml  server.py
grpc/definitions/: checker.proto  gen_service.bat
grpc/definitions/builds/: checker_pb2_grpc.py
grpc/definitions/builds/checker/: __init__.py
grpc/src/: client.py  server.py
grpc/tests/: test_grpc_service.py
hw4/: hw4.md
main-project/app/: contracts.py  database.py
main-project/app/auth/: routers.py
main-project/tests/: test_auth.py
rabbitmq/: pyproject.toml
rabbitmq/app/: consumer.py  producer.py  settings.py  utils.py
