[tool.poetry]
name = "RabbitMQ"
version = "0.0.1"
description = "RabbitMQ python app"
authors = ["Vlasov Vsevolod <sesevasa64@gmail.com>"]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
requests = "^2.28.1"
[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
